# SmartTraffic-HPC

./: .gitignore  CMakeLists.txt  requirements.txt
Docs/: ARCHITECTURE.md  DEPLOYMENT_COMPLETE.md  GETTING_STARTED.md  GITHUB_PUSH_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP_GUIDE.md  START_HERE.md  TROUBLESHOOTING.md  verify_setup.py
config/: processing_config.json  traffic_data.yaml
data/: README.md
include/: congestion_analyzer.h  density_estimator.h  image_utils.h  speed_tracker.h  vehicle_detector.h  visualization.h
output/: processed_video.json  webcam_output.json
scripts/: download_datasets.py  run_pipeline.py
src/: generate_data.cpp  main_traffic_monitor.cpp
src/image_processing/: congestion_analyzer.cpp  density_estimator.cpp  speed_tracker.cpp  vehicle_detector.cpp
src/parallel/: cuda_preprocessing.cu  mpi_image_batch.cpp  openmp_detector.cpp
src/python/: image_preprocessor.py  realtime_processor.py  train_yolo.py
src/utils/: image_utils.cpp  visualization.cpp
